--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -38,7 +38,7 @@
             %br
             %a(href="https://www.google.com/maps?q=35.639725,139.72213&t=m&z=16") 大きな地図で見る
             %br
-            %span.address 東京都港区白金台5-12-7　MG白金台ビル5・6・7F
+            %span.address 東京都港区白金台5-12-7　MG白金台ビル 5F
             %br
             %span 最寄り駅: 南北線・都営三田線　白金台駅より徒歩約6分 JR目黒駅より徒歩約14分
         #map
