--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -13,7 +13,7 @@
     %meta(property="og:title"       content="Rails寺子屋" )
     %meta(property="og:site_name"   content="Rails寺子屋"  )
     %meta(property="og:description" content="Rails寺子屋はWebアプリを作るための強力なツール&quot;Ruby on Rails&quot;を使ってWebアプリ作りを実践しながら学ぶイベントです。"  )
-    %meta(property="og:image"       content="http://rails.terakoya.io/src/assets/images/ogp_logo.png"  )
+    %meta(property="og:image"       content="http://rails.terakoya.io/images/ogp_logo.png" )
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
 
     %title= "Rails寺子屋第3回"
