Add accept application button

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -46,7 +46,8 @@
         %h4
           参加登録
         %p
-          後日、連絡いたします。
+          %a(href="https://docs.google.com/spreadsheet/viewform?usp=drive_web&formkey=dFFLSEZvcUprcGlFNFBBNWZkREtXbVE6MA#gid=2" target="_blank")
+            %button.btn.submit-btn 参加登録フォームへ
         %h4
           当日の持ち物
         .equipment
