--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -16,7 +16,7 @@
     %meta(property="og:image"       content="http://rails.terakoya.io/images/ogp_logo.png" )
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
 
-    %title= "Rails寺子屋第3回"
+    %title= "Rails寺子屋"
     %link(href="/css/normalize.css" rel="stylesheet")
     %link(href="/css/main.css" rel="stylesheet")
     %link(href="/css/bootstrap.css" rel="stylesheet")
