--- a/source/archives/3/index.html.haml
+++ b/source/archives/3/index.html.haml
@@ -18,12 +18,12 @@
           高専カンファレンス
         の合同イベントです。
       %h3
-        第4回 開催情報
+        第3回 開催情報
       .left-box
         %h4
           日時
         %strong
-          2014年5月24日(土) 10:00 開始 (9:30分開場)
+          2014年1月18日(土) 10:00 開始 (9:30分開場)
         %h4
           参加対象者
         %p
@@ -32,30 +32,61 @@
           会場
         #venue
           %address
-            %a(href="http://www.drecom.co.jp/")
-              %strong 株式会社ドリコム
-            %a(href="http://www.drecom.co.jp/company/accessmap/") (アクセス)
+            %a(href="https://info.cookpad.com/")
+              %strong クックパッド株式会社
+            %a(href="https://info.cookpad.com/location/") (アクセス)
             %br
-            %a(href="https://www.google.com/maps?q=35.631662,139.713409&t=m&z=16") 大きな地図で見る
+            %a(href="https://www.google.com/maps?q=35.639725,139.72213&t=m&z=16") 大きな地図で見る
             %br
-            %span.address 東京都目黒区下目黒1丁目8-1　アルコタワー17F
+            %span.address 東京都港区白金台5-12-7　MG白金台ビル 5F
             %br
-            %span 最寄り駅: 目黒駅
+            %span 最寄り駅: 南北線・都営三田線　白金台駅より徒歩約6分 JR目黒駅より徒歩約14分
         #map
       .right-box.clearfix
         %h4
           参加登録
         %p
-          しばらくお待ちください
+          %a(href="https://docs.google.com/spreadsheet/viewform?usp=drive_web&formkey=dFFLSEZvcUprcGlFNFBBNWZkREtXbVE6MA#gid=2" target="_blank")
+            %button.btn.submit-btn 参加登録フォームへ
         %h4
           当日の持ち物
         .equipment
           %p
-            詳細が決まり次第告知します
+            お弁当とPCを持参してください。
         %h4
           時間割
         .time-table
-          詳細が決まり次第告知します
+          %table.table.table-striped
+            %tr
+              %td
+                9:30
+              %td
+                開場
+            %tr
+              %td
+                10:00 - 12:00
+              %td
+                環境構築 & ワークショップ
+            %tr
+              %td
+                12:00 - 13:00
+              %td
+                ランチ
+            %tr
+              %td
+                13:00 - 17:00
+              %td
+                ワークショップ
+            %tr
+              %td
+                17:00 - 19:00
+              %td
+                懇親会
+            %tr
+              %td
+                19:00
+              %td
+                解散
 
     %h2
       過去の開催
@@ -67,14 +98,11 @@
         %li
           %a(href="/archives/2")
             Rails寺子屋 x kosenconf 第2回
-        %li
-          %a(href="/archives/3")
-            Rails寺子屋 x kosenconf 第3回
 
     %h2
       師範(コーチ)
     .masters.clearfix
-      - data.masters['4'].each do |master|
+      - data.masters['3'].each do |master|
         .master
           .icon
             %img( src="#{master['image']}" width="75" class="shadow" )
@@ -146,5 +174,5 @@
   %footer
     %span
 %script
-  var lat = 35.631662;
-  var lng = 139.713409;
+  var lat = 35.639725;
+  var lng = 139.72213;
