--- a/source/archives/3/index.html.haml
+++ b/source/archives/3/index.html.haml
@@ -136,7 +136,7 @@
         %span.role
           題字
         .icon
-          %img( src="https://si0.twimg.com/profile_images/1720785107/my_bigger.png" width="75" class="shadow" )
+          %img( src="https://pbs.twimg.com/profile_images/3465466052/cbf96df11d49bf4a4af0a60e1fa6c565.png" width="75" class="shadow" )
         .name
           さいとうかずよし
         %ul.clearfix
@@ -147,7 +147,7 @@
         %span.role
           絵師
         .icon
-          %img( src="http://a0.twimg.com/profile_images/3049823344/b89478d5d99dbaee208000b505c5677c.png" width="75" class="shadow" )
+          %img( src="https://pbs.twimg.com/profile_images/429648206129926145/YMcykICv.png" width="75" class="shadow" )
         .name
           あらなぎ
         %ul.clearfix
