--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -129,6 +129,12 @@
               %i.icon-twitter
 
     %h2
+      スポンサー
+    .sponsors.clearfix
+      .sponsor
+        = image_tag "spicelife.png", width: "250px"
+
+    %h2
       よくある質問
     .faqs
       .question
