--- a/source/css/style.css.scss
+++ b/source/css/style.css.scss
@@ -69,6 +69,7 @@ tr:nth-child(odd) td {
 .masters,
 .archives,
 .collaborators,
+.sponsors,
 .faqs {
   padding: 20px 0 20px 20px;
   background-image: url("../images/background.png");
