Add DRECOM logo

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -163,6 +163,7 @@
     .sponsors.clearfix
       .sponsor
         = image_tag "spicelife.png", width: "250px"
+        = image_tag "drecom.jpg", width: "270px"
 
     %h2
       よくある質問
