--- a/source/css/style.css.scss
+++ b/source/css/style.css.scss
@@ -233,6 +233,14 @@ tr:nth-child(odd) td {
   float: left;
 }
 
+.sponsors {
+  .sponsor {
+    img {
+      margin-right: 20px;
+    }
+  }
+}
+
 .faqs {
   .question {
     font-weight: bold;
