Add teamLab's logo

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -32,7 +32,7 @@
           会場
         #venue
           %address
-            %a(href="http://www.drecom.co.jp/")
+            %a(href="http://www.team-lab.com/")
               %strong チームラボ株式会社
             %a(href="http://www.team-lab.com/about#access") (アクセス)
             %br
@@ -166,6 +166,7 @@
     .sponsors.clearfix
       .sponsor
         = image_tag "spicelife.png", width: "250px"
+        = image_tag "team_lab.png", width: "160px"
 
     %h2
       よくある質問
