Change チームラボ floor.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -38,7 +38,7 @@
             %br
             %a(href="https://www.google.com/maps?q=35.704454,139.756738&t=m&z=16") 大きな地図で見る
             %br
-            %span.address 東京都文京区本郷1-11-6 東接本郷ビル5Ｆ
+            %span.address 東京都文京区本郷1-11-6 東接本郷ビル6F
             %br
             %span 最寄り駅: 水道橋駅
         #map
