--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,7 +23,7 @@
         %h4
           日時
         %strong
-          2015年03月28日(土) 10:00 開始 (09:30分開場)
+          2015年08月01日(土) 10:00 開始 (09:30分開場)
         %h4
           参加対象者
         %p
@@ -32,22 +32,21 @@
           会場
         #venue
           %address
-            %a(href="https://info.cookpad.com/")
-              %strong クックパッド株式会社
-            %a(href="https://info.cookpad.com/location/") (アクセス)
+            %a(href="http://www.pixiv.co.jp/")
+              %strong ピクシブ株式会社
+            %a(href="http://www.pixiv.co.jp/company/") (アクセス)
             %br
-            %a(href="https://www.google.com/maps?q=35.642137,139.71345&t=m&z=16") 大きな地図で見る
+            %a(href="http://goo.gl/maps/gn3xd") 大きな地図で見る
             %br
-            %span.address 東京都渋谷区恵比寿4-20-3 恵比寿ガーデンプレイスタワー12F
+            %span.address 東京都渋谷区千駄ヶ谷4-23-5 JPR千駄ヶ谷ビル5F
             %br
-            %span 最寄り駅: JR山手線・東京メトロ日比谷線 恵比寿駅
+            %span 最寄り駅: JR代々木駅, JR千駄ヶ谷駅, 東京メトロ北参道駅
         #map
       .right-box.clearfix
         %h4
           参加登録
         %p
-          %a(href="http://rails-terakoya.doorkeeper.jp/events/19813" target="_blank")
-            %button.btn.submit-btn 参加登録フォームへ
+          しばらくお待ち下さい。
         %h4
           当日の持ち物
         .equipment
@@ -107,11 +106,14 @@
         %li
           %a(href="/archives/5")
             Rails寺子屋 x kosenconf 第5回
+        %li
+          %a(href="/archives/6")
+            Rails寺子屋 x kosenconf 第6回
 
     %h2
       師範(コーチ)
     .masters.clearfix
-      - data.masters['6'].each do |master|
+      - data.masters['7'].each do |master|
         .master
           .icon
             %img( src="#{master['image']}" width="75" class="shadow" )
@@ -189,5 +191,5 @@
   %footer
     %span
 %script
-  var lat = 35.642137
-  var lng = 139.71345
+  var lat = 35.680903;
+  var lng = 139.706761;
