Add doorkeeper link

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -46,7 +46,8 @@
         %h4
           参加登録
         %p
-          しばらくお待ち下さい。
+          %a(href="https://rails-terakoya.doorkeeper.jp/events/27656" target="_blank")
+            %button.btn.submit-btn 参加登録フォームへ
         %h4
           当日の持ち物
         .equipment
