--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -171,7 +171,8 @@
       スポンサー
     .sponsors.clearfix
       .sponsor
-        = image_tag "spicelife.png", width: "250px"
+        = image_tag "spicelife.png", width: "228px"
+        = image_tag "pixiv.jpg"
 
     %h2
       よくある質問
