Increment count and add archive link

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -18,7 +18,7 @@
           高専カンファレンス
         の合同イベントです。
       %h3
-        第7回 開催情報
+        第8回 開催情報
       .left-box
         %h4
           日時
@@ -110,11 +110,14 @@
         %li
           %a(href="/archives/6")
             Rails寺子屋 x kosenconf 第6回
+        %li
+          %a(href="/archives/7")
+            Rails寺子屋 x kosenconf 第7回
 
     %h2
       師範(コーチ)
     .masters.clearfix
-      - data.masters['7'].each do |master|
+      - data.masters['8'].each do |master|
         .master
           .icon
             %img( src="#{master['image']}" width="75" class="shadow" )
