--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -32,15 +32,15 @@
           会場
         #venue
           %address
-            %a(href="http://www.pixiv.co.jp/")
-              %strong ピクシブ株式会社
-            %a(href="http://www.pixiv.co.jp/company/") (アクセス)
+            %a(href="http://www.drecom.co.jp/")
+              %strong 株式会社ドリコム
+            %a(href="http://www.drecom.co.jp/company/accessmap/") (アクセス)
             %br
-            %a(href="http://goo.gl/maps/gn3xd") 大きな地図で見る
+            %a(href="https://goo.gl/maps/u3VjuepgtCv") 大きな地図で見る
             %br
-            %span.address 東京都渋谷区千駄ヶ谷4-23-5 JPR千駄ヶ谷ビル2F
+            %span.address 東京都目黒区下目黒1丁目8-1 アルコタワー17F
             %br
-            %span 最寄り駅: JR代々木駅, JR千駄ヶ谷駅, 東京メトロ北参道駅
+            %span 最寄り駅: JR東急目黒線, 東京メトロ南北線, 都営地下鉄三田線
         #map
       .right-box.clearfix
         %h4
@@ -175,7 +175,7 @@
     .sponsors.clearfix
       .sponsor
         = image_tag "spicelife.png", width: "228px"
-        = image_tag "pixiv.jpg"
+        = image_tag "drecom.jpg"
 
     %h2
       よくある質問
@@ -196,5 +196,5 @@
   %footer
     %span
 %script
-  var lat = 35.680903;
-  var lng = 139.706761;
+  var lat = 35.631659;
+  var lng = 139.713408;
