Fix drecom image width

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -175,7 +175,7 @@
     .sponsors.clearfix
       .sponsor
         = image_tag "spicelife.png", width: "228px"
-        = image_tag "drecom.jpg"
+        = image_tag "drecom.jpg", width: "230px"
 
     %h2
       よくある質問
