Add nearest station information
最寄り駅の情報が抜けていたので追記しました。

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -41,6 +41,8 @@
             %span.address 東京都目黒区下目黒1丁目8-1 アルコタワー17F
             %br
             %span 最寄り駅: JR東急目黒線, 東京メトロ南北線, 都営地下鉄三田線
+            %br
+            %span 「目黒駅」より徒歩5分
         #map
       .right-box.clearfix
         %h4
