Adjust pixiv logo image

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -114,7 +114,7 @@
       スポンサー
     .sponsors.clearfix
       .sponsor
-        = image_tag "pixiv.jpg"
+        = image_tag "pixiv.png", class: 'logo-pixiv'
 
     %h2
       よくある質問
