--- a/source/css/style.css.scss
+++ b/source/css/style.css.scss
@@ -234,6 +234,9 @@ tr:nth-child(odd) td {
 }
 
 .sponsors {
+  display: flex;
+  align-items: center;
+
   .sponsor {
     img {
       margin-right: 20px;
