--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -115,6 +115,7 @@
     .sponsors.clearfix
       .sponsor
         = image_tag "pixiv.png", class: 'logo-pixiv'
+      .sponsor
         = image_tag "cookpad.png", class: 'logo-cookpad'
 
     %h2
